force-app/main/default/objects/CleverTap__Sync_Configuration__c/fields/CleverTap__ConnectionId__c.field-meta.xml
<CustomField>
    <fullName>CleverTap__ConnectionId__c</fullName>
    <label>Connection ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>