force-app/main/default/objects/CleverTap__Sync_Configuration__c/fields/CleverTap__Entity__c.field-meta.xml
<CustomField>
    <fullName>CleverTap__Entity__c</fullName>
    <label>CleverTap Entity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>profile</fullName>
                <default>true</default>
                <label>Profile</label>
            </value>
            <value>
                <fullName>event</fullName>
                <label>Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>