force-app/main/default/objects/CleverTap__Sync_Configuration__c/fields/CleverTap__Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>CleverTap__Sync_Type__c</fullName>
    <label>Sync Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>salesforce_to_clevertap</fullName>
                <default>true</default>
                <label>Salesforce to CleverTap</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>